--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <h1> Aqui iria el titulo de la pagina</h1>
     <h1> Esto es un parrafo</h1>
+    <h1> Esto es un segundo parrafo</h1>
+    
 
 </body>
 </html>
