--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 
-    <style href"miEstilo.css">
+    <style href="miEstilo.css">
 <body>
 
     <h1> Aqui iria el titulo de la pagina</h1>
